--- a/overlay/SettingsResXiaomi/res/values/lineage_config.xml
+++ b/overlay/SettingsResXiaomi/res/values/lineage_config.xml
@@ -21,4 +21,7 @@
 
     <!-- Whether to show volume steps settings -->
     <bool name="config_supports_volume_steps" translatable="false">true</bool>
+
+    <!-- Battery Info: mAh -->
+    <integer name="config_battery_divider" translatable="false">1</integer>
 </resources>
